--- a/GroceryApplication/test-output/emailable-report.html
+++ b/GroceryApplication/test-output/emailable-report.html
@@ -9,10 +9,16 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">GroceryApplication</th></tr>
-<tr><td><a href="#t0">ChromeTest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">10,575</td><td></td><td></td></tr>
+<tr><td><a href="#t0">ChromeTest</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">48,411</td><td>smoke</td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">FirefoxTest</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">74,714</td><td>smoke</td><td></td></tr>
+<tr><th>Total</th><th class="num">4</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">123,125</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">GroceryApplication</th></tr></tbody><tbody id="t0"><tr><th colspan="4">ChromeTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCase.CategoryPageTest</td><td><a href="#m0">checkForStatus</a></td><td rowspan="1">1729792843814</td><td rowspan="1">3146</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">GroceryApplication</th></tr></tbody><tbody id="t0"><tr><th colspan="4">ChromeTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCase.LoginPageTest</td><td><a href="#m0">verifyLoginWithValidData</a></td><td rowspan="1">1730269868509</td><td rowspan="1">5512</td></tr><tr class="passedodd"><td rowspan="1">testCase.SubCategoryTest</td><td><a href="#m1">verifyNewSubCategory</a></td><td rowspan="1">1730269892005</td><td rowspan="1">7516</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">FirefoxTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCase.LoginPageTest</td><td><a href="#m2">verifyLoginWithValidData</a></td><td rowspan="1">1730269882931</td><td rowspan="1">4520</td></tr><tr class="passedodd"><td rowspan="1">testCase.SubCategoryTest</td><td><a href="#m3">verifyNewSubCategory</a></td><td rowspan="1">1730269918501</td><td rowspan="1">7400</td></tr></tbody>
 </table>
-<h2>ChromeTest</h2><h3 id="m0">testCase.CategoryPageTest#checkForStatus</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>ChromeTest</h2><h3 id="m0">testCase.LoginPageTest#verifyLoginWithValidData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testCase.SubCategoryTest#verifyNewSubCategory</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>FirefoxTest</h2><h3 id="m2">testCase.LoginPageTest#verifyLoginWithValidData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">testCase.SubCategoryTest#verifyNewSubCategory</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
