--- a/GroceryApplication/test-output/index.html
+++ b/GroceryApplication/test-output/index.html
@@ -50,17 +50,17 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-GroceryApplication" class="navigator-link ">
-                    <span>C:\Users\User\git\GroceryApplication\GroceryApplication\TestNewTestCase.xml</span>
+                    <span>E:\code_workspace\GroceryApplication\GroceryApplication\smoketest.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
                   <a href="#" panel-name="testlist-GroceryApplication" class="navigator-link ">
-                    <span class="test-stats">1 test</span>
+                    <span class="test-stats">2 tests</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
                   <a href="#" panel-name="group-GroceryApplication" class="navigator-link ">
-                    <span>0 groups</span>
+                    <span>1 group</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,22 @@
                     <div class="method-list-content passed suite-GroceryApplication">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-GroceryApplication" title="testCase.CategoryPageTest" class="method navigator-link" hash-for-method="checkForStatus">checkForStatus</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-GroceryApplication" title="testCase.LoginPageTest" class="method navigator-link" hash-for-method="verifyLoginWithValidData">verifyLoginWithValidData</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-GroceryApplication" title="testCase.LoginPageTest" class="method navigator-link" hash-for-method="verifyLoginWithValidData">verifyLoginWithValidData</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-GroceryApplication" title="testCase.SubCategoryTest" class="method navigator-link" hash-for-method="verifyNewSubCategory">verifyNewSubCategory</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-GroceryApplication" title="testCase.SubCategoryTest" class="method navigator-link" hash-for-method="verifyNewSubCategory">verifyNewSubCategory</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-GroceryApplication -->
@@ -121,14 +136,43 @@
           <div class="suite-GroceryApplication-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testCase.CategoryPageTest</span>
+              <span class="class-name">testCase.LoginPageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="checkForStatus">
-                  </a> <!-- checkForStatus -->
-                  <span class="method-name">checkForStatus</span>
+                  <a name="verifyLoginWithValidData">
+                  </a> <!-- verifyLoginWithValidData -->
+                  <span class="method-name">verifyLoginWithValidData</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyLoginWithValidData">
+                  </a> <!-- verifyLoginWithValidData -->
+                  <span class="method-name">verifyLoginWithValidData</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-GroceryApplication-class-passed -->
+          <div class="suite-GroceryApplication-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">testCase.SubCategoryTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyNewSubCategory">
+                  </a> <!-- verifyNewSubCategory -->
+                  <span class="method-name">verifyNewSubCategory</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyNewSubCategory">
+                  </a> <!-- verifyNewSubCategory -->
+                  <span class="method-name">verifyNewSubCategory</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +180,7 @@
         </div> <!-- panel GroceryApplication -->
         <div panel-name="test-xml-GroceryApplication" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\User\git\GroceryApplication\GroceryApplication\TestNewTestCase.xml</span>
+            <span class="header-content">E:\code_workspace\GroceryApplication\GroceryApplication\smoketest.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,13 +189,32 @@
 &lt;suite thread-count=&quot;2&quot; parallel=&quot;tests&quot; name=&quot;GroceryApplication&quot;&gt;
   &lt;listeners&gt;
     &lt;listener class-name=&quot;utilities.ExtenetReport&quot;/&gt;
+    &lt;listener class-name=&quot;utilities.RetryListener&quot;/&gt;
   &lt;/listeners&gt;
   &lt;test thread-count=&quot;2&quot; parallel=&quot;tests&quot; name=&quot;ChromeTest&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;Chrome&quot;/&gt;
+    &lt;groups&gt;
+      &lt;run&gt;
+        &lt;include name=&quot;smoke&quot;/&gt;
+      &lt;/run&gt;
+    &lt;/groups&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testCase.CategoryPageTest&quot;/&gt;
+      &lt;class name=&quot;testCase.LoginPageTest&quot;/&gt;
+      &lt;class name=&quot;testCase.SubCategoryTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- ChromeTest --&gt;
+  &lt;test thread-count=&quot;2&quot; parallel=&quot;tests&quot; name=&quot;FirefoxTest&quot;&gt;
+    &lt;parameter name=&quot;browser&quot; value=&quot;firefox&quot;/&gt;
+    &lt;groups&gt;
+      &lt;run&gt;
+        &lt;include name=&quot;smoke&quot;/&gt;
+      &lt;/run&gt;
+    &lt;/groups&gt;
+    &lt;classes&gt;
+      &lt;class name=&quot;testCase.LoginPageTest&quot;/&gt;
+      &lt;class name=&quot;testCase.SubCategoryTest&quot;/&gt;
+    &lt;/classes&gt;
+  &lt;/test&gt; &lt;!-- FirefoxTest --&gt;
 &lt;/suite&gt; &lt;!-- GroceryApplication --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -163,7 +226,10 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">ChromeTest (1 class)</span>
+                <span class="test-name">ChromeTest (2 classes)</span>
+              </li>
+              <li>
+                <span class="test-name">FirefoxTest (2 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -173,6 +239,18 @@
             <span class="header-content">Groups for GroceryApplication</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="test-group">
+              <span class="test-group-name">smoke</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">verifyLoginWithValidData</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">verifyNewSubCategory</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="times-GroceryApplication" class="panel">
@@ -189,16 +267,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'checkForStatus')
-data.setCell(0, 2, 'testCase.CategoryPageTest')
-data.setCell(0, 3, 3146);
+data.setCell(0, 1, 'verifyNewSubCategory')
+data.setCell(0, 2, 'testCase.SubCategoryTest')
+data.setCell(0, 3, 7516);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'verifyNewSubCategory')
+data.setCell(1, 2, 'testCase.SubCategoryTest')
+data.setCell(1, 3, 7400);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'verifyLoginWithValidData')
+data.setCell(2, 2, 'testCase.LoginPageTest')
+data.setCell(2, 3, 5512);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'verifyLoginWithValidData')
+data.setCell(3, 2, 'testCase.LoginPageTest')
+data.setCell(3, 3, 4520);
 window.suiteTableData['GroceryApplication']= { tableData: data, tableDiv: 'times-div-GroceryApplication'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 10 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-GroceryApplication">
               </div> <!-- times-div-GroceryApplication -->
             </div> <!-- times-div -->
@@ -213,13 +303,28 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-GroceryApplication" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">1 ignored method</span>
+            <span class="header-content">6 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">testCase.CategoryPageTest</span>
+              <span class="ignored-class-name">testCase.LoginPageTest</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">EditNewCategory</span>
+                <span class="ignored-method-name">verifyLoginWithInvalidData</span>
+                <br/>
+                <span class="ignored-method-name">verifyLoginWithInvalidData</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">testCase.SubCategoryTest</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">verifyEditSubCategory</span>
+                <br/>
+                <span class="ignored-method-name">verifyEditSubCategory</span>
+                <br/>
+                <span class="ignored-method-name">verifyDeleteSubCatgory</span>
+                <br/>
+                <span class="ignored-method-name">verifyDeleteSubCatgory</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -231,18 +336,63 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testCase.CategoryPageTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testCase.LoginPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod(Chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
+              <div class="configuration-method before">
+                <span class="method-name">beforeMethod(firefox)</span>
+                <span class="method-start">3 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">checkForStatus</span>
-                <span class="method-start">7150 ms</span>
+                <span class="method-name">verifyLoginWithValidData</span>
+                <span class="method-start">15623 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">afterMethode([TestResult name=checkForStatus status=SUCCESS method=CategoryPageTest.checkForStatus()[pri:0, insta...)</span>
-                <span class="method-start">10316 ms</span>
+                <span class="method-name">afterMethode([TestResult name=verifyLoginWithValidData status=SUCCESS method=LoginPageTest.verifyLoginWithValidDa...)</span>
+                <span class="method-start">23301 ms</span>
+              </div> <!-- configuration-method after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">testCase.SubCategoryTest</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">beforeMethod(Chrome)</span>
+                <span class="method-start">23333 ms</span>
+              </div> <!-- configuration-method before -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">testCase.LoginPageTest</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">verifyLoginWithValidData</span>
+                <span class="method-start">30045 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethode([TestResult name=verifyLoginWithValidData status=SUCCESS method=LoginPageTest.verifyLoginWithValidDa...)</span>
+                <span class="method-start">34573 ms</span>
+              </div> <!-- configuration-method after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">testCase.SubCategoryTest</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">beforeMethod(firefox)</span>
+                <span class="method-start">34581 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">verifyNewSubCategory</span>
+                <span class="method-start">39119 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethode([TestResult name=verifyNewSubCategory status=SUCCESS method=SubCategoryTest.verifyNewSubCategory()[p...)</span>
+                <span class="method-start">46638 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <span class="method-name">verifyNewSubCategory</span>
+                <span class="method-start">65615 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethode([TestResult name=verifyNewSubCategory status=SUCCESS method=SubCategoryTest.verifyNewSubCategory()[p...)</span>
+                <span class="method-start">73019 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
